--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XDDD</title>
+    <style>
+        body{
+            background: #abcdef;
+        }
+    </style>
 </head>
 <body>
-    asdfsadsadsadsadsadsadsadsa
+    asdfsadsadsadsadsadsadsadsad
 </body>
 </html>
