--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>XDDD</title>
     <style>
         body{
-            background: #abcdef;
+            background-color: #abcdef;
         }
     </style>
 </head>
