--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XDDD</title>
-    <link rel="icon" type="image/x-icon" href="https://img.wprost.pl/img/xd-mlodziezowym-slowem-roku-2017/6d/86/6ef09a8f0837762197930332167e.webp">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body{
             background-color: #abcdef;
@@ -13,6 +13,6 @@
 </head>
 <body>
     hulajka
-    <img src="https://img.wprost.pl/img/xd-mlodziezowym-slowem-roku-2017/6d/86/6ef09a8f0837762197930332167e.webp">
+    <img src="favicon.ico">
 </body>
 </html>
