--- a/dojcz/index.html
+++ b/dojcz/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>XDDD</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <style>
+        body{
+            background-color: #abcdef;
+        }
+    </style>
+</head>
+<body>
+    hulajkaaaa
+    
+</body>
+</html>
