--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     </style>
 </head>
 <body>
-    hulajka
-    <img src="favicon.ico">
+    <header>
+        <h1>Anteq99 wita</h1>
+        <h3>Wyróżnienie - MrByrtek</h3>
+    </header>
 </body>
 </html>
