--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XDDD</title>
+    <title>Strona internetowa Anteq99</title>
+    <meta http-equiv="refresh" content="5">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body{
