--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <meta http-equiv="refresh" content="5">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
-        body{
-            background-color: #abcdef;
+        html, body{
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+        header{
+            margin: auto;
+            width: 80%;
+            height: 10%
+            border-top-left-radius:100%;
+            border-bottom-right-radius:100%;
+            border: 5px solid black;
         }
     </style>
 </head>
