--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>strona internetowa Anteq99</title>
+    <title>Strona internetowa Anteq99</title>
     <meta http-equiv="refresh" content="5">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
@@ -16,7 +16,7 @@
         header{
             margin: auto;
             width: 80%;
-            height: 10%
+            height: 10%;
             border-top-left-radius:100%;
             border-bottom-right-radius:100%;
             border: 5px solid black;
