--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
             margin: auto;
             width: 80%;
             height: 10%;
-            border-top-left-radius:100%;
-            border-bottom-right-radius:100%;
+            text-align: center;
+            border-top-left-radius:10%;
+            border-bottom-right-radius:10%;
             border: 5px solid black;
         }
     </style>
