--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             width: 80%;
             height: 10%;
             text-align: center;
-            border-top-left-radius:10%;
-            border-bottom-right-radius:10%;
+            border-radius: 100px;
             border: 5px solid black;
         }
     </style>
