--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             padding: 0;
         }
         header{
-            margin: auto;
+            margin: 20px auto auto auto;
             width: 80%;
             height: 15%;
             text-align: center;
