--- a/fnaf/index.html
+++ b/fnaf/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
-<style>
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ANTEQ99 - STRONA INTERNETOWA DLA SIGMY</title>
+    <link rel="shortcut icon" href="xd.png" type="image/x-icon">
+    <style>
+        html, body{
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            margin: 0;
+            background-image: url(Office.gif);
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
-<a href="mrbyrtek.github.io>asdasd</a>
+    <div id="buttleft">
+        
+    </div>
 </body>
 </html>
