--- a/index.html
+++ b/index.html
@@ -9,24 +9,50 @@
     <style>
         html, body{
             width: 100%;
-            height: 100%;
+            height:100%;
             margin: 0;
             padding: 0;
+            background-image: linear-gradient(150deg, rgb(255, 21, 0) ,rgb(255, 72, 0));
         }
         header{
-            margin: 20px auto auto auto;
-            width: 80%;
-            height: 15%;
+            margin: auto;
+            background-image: linear-gradient(135deg, rgb(255, 0, 0),rgb(152, 0, 0));
+            color: white;
+            width: 100%;
+            padding: 1% 0 1% 0;
             text-align: center;
-            border-radius: 100px;
-            border: 5px solid black;
+            border-radius: 30px;
+            box-shadow: inset black 0px 0px 5px 10px;
+        }
+        main{
+            color: white;
+            width: 100%;
+            height: 77%;
+            text-align: center;
+            border-radius: 10px;
+        }
+        footer{
+            margin: auto;
+            padding: 1% 0 1% 0;
+            background-image: linear-gradient(135deg, rgb(255, 0, 0),rgb(152, 0, 0));
+            color: white;
+            width: 100%;
+            text-align: center;
+            border-radius: 10px;
+            box-shadow: inset black 0px 0px 13px 3px;
         }
     </style>
 </head>
 <body>
     <header>
-        <h2>Anteq99 wita</h2>
-        <h3>Wyróżnienie - MrByrtek</h3>
+        <h1>Anteq99 wita</h1>
+        <h5>Wyróżnienie - <a style="color: white;text-decoration: none;" href="https://mrbyrtek.github.io" target="_blank">MrByrtek</a></h5>
     </header>
+    <main>
+
+    </main>
+    <footer>
+        &copy;Anteq99
+    </footer>
 </body>
 </html>
