--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             text-align: center;
             border-radius: 10px;
             box-shadow: inset black 0px 0px 13px 3px;
+            position: absolute;
+            bottom: 0px;
         }
     </style>
 </head>
