--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         html, body{
-            width: 100%;
-            height:100%;
+            width: 100vw;
+            height:100vh;
             margin: 0;
             padding: 0;
             background-image: linear-gradient(-15deg, rgb(255, 10, 0) ,rgb(255, 62, 0));
@@ -18,7 +18,7 @@
             margin: auto;
             background-image: linear-gradient(135deg, rgb(255, 10, 0),rgb(152, 0, 0));
             color: white;
-            width: 90%;
+            width: 90vw;
             padding: 1% 0 1% 0;
             text-align: center;
             border-radius: 30px;
@@ -27,9 +27,9 @@
         main{
             color: white;
             width: 90%;
-            height: 77%;
+            height: max-content;
             text-align: center;
-            border-radius: 10px;
+            margin: auto;
         }
         footer{
             margin: auto;
@@ -50,7 +50,9 @@
         <h5>Wyróżnienie - <a style="color: white;text-decoration: none;" href="https://mrbyrtek.github.io" target="_blank">MrByrtek</a></h5>
     </header>
     <main>
-
+        <div>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </div>
     </main>
     <footer>
         &copy;Anteq99
