--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strona internetowa Anteq99</title>
     <meta http-equiv="refresh" content="5">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="photos/favicon.ico">
     <style>
         html, body{
             width: 100vw;
