--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
+
 <!DOCTYPE html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strona internetowa Anteq99</title>
-    <link rel="icon" type="image/x-icon" href="photos/favicon.ico">
+    <title>A99 | Strona główna</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         html, body{
+            font-family: OCR A Std, monospace;
             width: 100vw;
             height:100vh;
             margin: 0;
             padding: 0;
-            background-image: linear-gradient(-15deg, rgb(255, 10, 0) ,rgb(255, 62, 0));
+            background-color: black;
         }
         header{
             margin: auto;
-            background-image: linear-gradient(135deg, rgb(255, 10, 0),rgb(152, 0, 0));
-            color: white;
-            width: 90vw;
+            color: red;
+            width: 50vw;
             padding: 1% 0 1% 0;
             text-align: center;
             border-radius: 30px;
-            box-shadow: inset black 0px 0px 5px 10px;
+            box-shadow: inset red 0px 0px 60px 8px;
         }
         main{
             color: white;
@@ -30,31 +31,20 @@
             text-align: center;
             margin: auto;
         }
-        footer{
-            margin: auto;
-            padding: 1% 0 1% 0;
-            background-image: linear-gradient(135deg, rgb(255, 0, 0),rgb(152, 0, 0));
-            color: white;
-            width: 90%;
-            text-align: center;
-            border-radius: 10px;
-            box-shadow: inset black 0px 0px 13px 3px;
-        }
     </style>
 </head>
 <body>
     
     <header>
-        <h1>Anteq99 wita</h1>
-        <h5>Wyróżnienie - <a style="color: white;text-decoration: none;" href="https://mrbyrtek.github.io" target="_blank">MrByrtek</a></h5>
+        <h1>Strona główna</h1>
     </header>
     <main>
-        <div>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        </div>
+        <a href="#">Graj w blackjacka</a>
     </main>
     <footer>
-        &copy;Anteq99
+        <h4>Sprawdź również: <a style="color: red;text-decoration: none;" href="https://mrbyrtek.github.io" target="_blank">MrByrtek</a></h4>
     </footer>
 </body>
+<script>
+</script>
 </html>
