--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
         header{
             margin: auto;
             color: red;
-            width: 50vw;
+            width: 80vw;
+            height: 100px;
             padding: 1% 0 1% 0;
             text-align: center;
             border-radius: 30px;
             box-shadow: inset red 0px 0px 60px 8px;
+            animation: k 2s;
+            overflow: hidden;
+            text-wrap: nowrap;
         }
         main{
             color: white;
@@ -30,6 +34,11 @@
             height: max-content;
             text-align: center;
             margin: auto;
+        }
+        @keyframes k{
+            0%{width: 1vw;height: 0px;}
+            20%{width: 1vw;height: 100px;}
+            100%{width:80vw;}
         }
     </style>
 </head>
