--- a/temp.html
+++ b/temp.html
@@ -6,6 +6,6 @@
     <title>Przekierowanie</title>
 </head>
 <body>
-  <img src = "polski_pingwin_moment">
+  <img src = "polski_pingwin_moment.png">
 </body>
 </html>
