--- a/temp.html
+++ b/temp.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Przekierowanie</title>
+    <meta http-equiv="refresh", content="2, https://mrbyrtek.github.io">
 </head>
 <body>
   <img src = "polski_pingwin_moment.png">
