--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a href="#">Graj w blackjacka</a>
     </main>
     <footer>
-        <h4>Sprawdź również: <a style="color: red;text-decoration: none;" href="https://mrbyrtek.github.io" target="_blank">MrByrtek</a></h4>
+        <h4>Sprawdź również: <a style="color: red;text-decoration: none;" href="temp.html" target="_blank">MrByrtek</a></h4>
     </footer>
 </body>
 <script>
