--- a/temp.html
+++ b/temp.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Przekierowanie</title>
-    <meta http-equiv="refresh", content="2, https://mrbyrtek.github.io">
+    <meta http-equiv="refresh", content="20, https://mrbyrtek.github.io">
+    <style>
+      body{
+        font-size: 5vw;
+        text-align: center;
+      }
+      #img{
+        margin: auto;
+        background-color: red;
+        width: 54vh;
+        height: 80vh;
+        background-image: url(polski_pingwin_moment.png);
+      }
+    </style>
 </head>
 <body>
-  <img src = "polski_pingwin_moment.png">
+  <div id="img"></div>
+    Przekierowywanie...
 </body>
 </html>
