--- a/games/blackjack/blackjack.html
+++ b/games/blackjack/blackjack.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>A99 | BlackJack</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
+</head>
+<body>
+    <header>
+        KASYNO <a style="text-decoration: none;color: black;" href="https://pl.wikipedia.org/wiki/G%C5%82owienka_(wie%C5%9B)" target="_blank">GŁOWIEŃSKIE</a>
+    </header>
+    <main>
+        <div id="play">PLAY</div>
+        <input type="number" id="betmoney"><div id="betaccept" style="display: none;">BET</div>
+        <div id="hit">BIERZ</div>
+        <div id="stand">ZOSTAW</div>
+        <div id="dealer"></div>
+        <div id="player"></div>
+    </main>
+</body>
+</html>
