--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1>Strona główna</h1>
     </header>
     <main>
-        <a href="#">Graj w blackjacka</a>
+        <a href="games/blackjack/index.html">Graj w blackjacka</a>
     </main>
     <footer>
         <h4>Sprawdź również: <a style="color: red;text-decoration: none;" href="https://mrbyrtek.github.io" target="_blank">MrByrtek</a></h4>
