--- a/games/blackjack/index.html
+++ b/games/blackjack/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -14,7 +15,7 @@
     </header>
     <main>
         <div id="play">PLAY</div>
-        <input type="number" id="betmoney"><div id="betaccept" style="display: none;">BET</div>
+        <div style="display: flex;margin-left:40vw"><input type="number" id="betbar"><div id="betaccept">BET</div></div>
         <div id="hit">BIERZ</div>
         <div id="stand">ZOSTAW</div>
         <div id="dealer"></div>
