--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     </header>
     <main>
         <a href="games/blackjack/index.html" style="font-size:5vw">Graj w blackjacka</a>
+        <a href="games/fnaf/index.html" style="font-size:5vw">Graj w Pięć Nocy u Fryderyka</a>
     </main>
     <footer>
         <h4>Sprawdź również: <a style="color: red;text-decoration: none;" href="https://mrbyrtek.github.io" target="_blank">MrByrtek</a></h4>
