--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1>Strona główna</h1>
     </header>
     <main>
-        <a href="games/blackjack/index.html" style="font-size:5vw">Graj w blackjacka</a>
+        <a href="games/blackjack/index.html" style="font-size:5vw">Graj w blackjacka</a><br>
         <a href="games/fnaf/index.html" style="font-size:5vw">Graj w Pięć Nocy u Fryderyka</a>
     </main>
     <footer>
