--- a/games/fnaf/index.html
+++ b/games/fnaf/index.html
@@ -79,11 +79,13 @@
             width: 227px;
             height: 44px;
             background-image: url(graphics/menu/sixnight.png);
+            display: none;
         }
         #cnight{
             width: 306px;
             height: 44px;
             background-image: url(graphics/menu/cnight.png);
+            display: none;
         }
         #pointer{
             width: 43px;
@@ -101,10 +103,10 @@
         <div id="fnaf"></div>
         <div id="stars"></div>
         <section id="modes">
-            <div id="newgame"></div>
+        <div id="newgame"><div id="pointer"></div>
         <div id="continue"></div>
         <div id="sixnight"></div>
-        <div id="cnight"><div id="pointer"></div></div>
+        <div id="cnight"></div>
         </section>
     </div>
 </div>
