--- a/games/fnaf/index.html
+++ b/games/fnaf/index.html
@@ -101,7 +101,7 @@
         <div id="fnaf"></div>
         <div id="stars"></div>
         <section id="modes">
-        <div id="newgame"><div id="pointer"></div>
+        <div id="newgame"><div id="pointer"></div></div>
         <div id="continue"></div>
         <div id="sixnight"></div>
         <div id="cnight"></div>
