--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <h1>Strona główna</h1>
     </header>
     <main>
-        <a href="games/blackjack/index.html" style="font-size:5vw">Graj w blackjacka</a><br>
-        <a href="games/fnaf/index.html" style="font-size:5vw">Graj w Pięć Nocy u Fryderyka</a>
+        <a href="games/blackjack" style="font-size:5vw">Graj w blackjacka</a><br>
+        <a href="games/fnaf" style="font-size:5vw">Graj w Pięć Nocy u Fryderyka</a>
     </main>
     <footer>
         <h4>Sprawdź również: <a style="color: red;text-decoration: none;" href="https://mrbyrtek.github.io" target="_blank">MrByrtek</a></h4>
