--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     if(localStorage.length > lStoreCorrect.length){
         for(let i = 0;i<localStorage.length;i++){
             if(lstorcheck(localStorage[i],lStoreCorrect)){
-                localStorage.splice(i,i);
+                localStorage.removeItem(localStorage[i]);
             }
         }
     }
