--- a/games/fnaf/index.html
+++ b/games/fnaf/index.html
@@ -126,10 +126,10 @@
         localStorage.setItem("stars","0");
     }
     let starCount = localStorage.getItem("stars");
-    if(localStorage.getItem("night") == null){
-        localStorage.setItem("night","1");
+    if(localStorage.getItem("fnaf1_night") == null){
+        localStorage.setItem("fnaf1_night","1");
     }
-    let nightNumb = localStorage.getItem("night");
+    let nightNumb = localStorage.getItem("fnaf1_night");
 
     function loading(){
 
