--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </footer>
 </body>
 <script>
-    let lStoreCorrect = ["cassino_money","fnaf1_nights"];
+    let lStoreCorrect = ["cassino_money","fnaf1_night"];
         if(lstorcheck(localStorage.key(i),lStoreCorrect)){
             localStorage.removeItem(localStorage.key(i));
         }
