--- a/games/fnaf/index.html
+++ b/games/fnaf/index.html
@@ -66,6 +66,7 @@
             position: absolute;
             top: 0px;
             display: none;
+            background-image: url(graphics/cmrglitch.gif);
         }
         #fnaf{
             margin-top: 5vh;
